--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\BottleView\Scripts\ButtonPress.cs" />
+     <Compile Include="Assets\BottleView\Scripts\SortingOrder.cs" />
      <Compile Include="Assets\Evenement.cs" />
      <Compile Include="Assets\FollowTarget.cs" />
      <Compile Include="Assets\FollowTarget2.cs" />
@@ -368,6 +370,7 @@
      <None Include="Assets\StixGames - DirectX 11 Grass Shader\Grass.shader" />
      <None Include="Assets\UniStorm (Mobile)\Scripts (Mobile)\Shaders\Current\Mobile\UniStorm Mobile Stars.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\NoiseAndGrainDX11.shader" />
+     <None Include="Assets\BottleView\Shaders\StandardDS.shader" />
      <None Include="Assets\UniStorm (Desktop)\Scripts (Desktop)\Shaders\Current\UniStorm Dynamic Storm Clouds (Untity 5).shader" />
      <None Include="Assets\UniStorm (Desktop)\Additional Credit\Credit.txt" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BrightPassFilter2.shader" />
